# My-work

./: README.md
Computer graphics/: README.txt
Computer graphics/3d/src/: cube.cpp
Computer graphics/camera/: CMakeLists.txt
Computer graphics/camera/resources/shaders/: shader.fs
Computer graphics/camera/src/: cube.cpp
Computer graphics/lighting/resources/shaders/: shader.fs  shader.vs
Computer graphics/lighting/src/: cube.cpp
Computer graphics/textures/: CMakeLists.txt
Computer graphics/textures/src/: 2texture.cpp  plain_texture.cpp  rotate.cpp  texture45.cpp
Computer graphics/treugolnik/: CMakeLists.txt  umnyj-chelovek-v-ochkah.jpgZone.Identifier
Computer graphics/treugolnik/resources/shaders/: shader.fs  shader.vs
Computer graphics/treugolnik/src/: gr_triangle.cpp  square.cpp
Computer graphics/triangle/: CMakeLists.txt
Computer graphics/triangle/include/: glad.h
Computer graphics/triangle/resources/shaders/: shader.fs  shader.vs
Computer graphics/triangle/src/: game.cpp
Unity learning/Culling/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CircleCulling.sln  Culling.sln  README.md
Unity learning/Culling/Assets/Scenes/: SampleScene.unity
Unity learning/Culling/Assets/Scripts/: CullingSystem.cs  CullingTarget.cs  DetectionCircle.cs  Frustum.cs  PlayerController.cs
Unity learning/Culling/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity learning/Culling/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
Unity learning/Culling/UserSettings/Layouts/: default-6000.dwlt
Unity learning/ECS simulation/: Assembly-CSharp.csproj  README.md  Traffic.sln
Unity learning/ECS simulation/Assets/: Bounds.prefab  UniversalRenderPipelineGlobalSettings.asset
Unity learning/ECS simulation/Assets/Components/: Food.cs  Predator.cs  Prey.cs
Unity learning/ECS simulation/Assets/Prefabs/: Food.prefab  Prey.prefab
Unity learning/ECS simulation/Assets/Scenes/: SampleScene.unity
Unity learning/ECS simulation/Assets/Systems/: FoodSpawnSystem.cs  PredatorBehaviour.cs  PredatorPhysics.cs  PreyBehaviour.cs  PreyPhysics.cs
Unity learning/ECS simulation/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
Unity learning/ECS simulation/UserSettings/Layouts/: default-6000.dwlt
Unity learning/Leo ECS/: Assembly-CSharp.csproj  LeoECS.sln  LeoECSBallisticFinished.sln  README.md
Unity learning/Leo ECS/Assets/: UniversalRenderPipelineGlobalSettings.asset
Unity learning/Leo ECS/Assets/Components/: Ghost.cs
Unity learning/Leo ECS/Assets/Prefabs/: Ball.prefab
Unity learning/Leo ECS/Assets/Scenes/: SampleScene.unity
Unity learning/Leo ECS/Assets/Scripts/: ECSStartup.cs  StaticData.asset  StaticData.cs
Unity learning/Leo ECS/Assets/Systems/: CollisionSystem.cs  GhostMovementSystem.cs  GhostSpawnSystem.cs  RenderSystem.cs
Unity learning/Leo ECS/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
Unity learning/Leo ECS/UserSettings/Layouts/: default-6000.dwlt
Unity learning/Manual mesh generation/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  MeshGeneration.sln  MeshGenerationFinished.sln  README.md
Unity learning/Manual mesh generation/Assets/Scenes/: SampleScene.unity
Unity learning/Manual mesh generation/Assets/Scripts/: MeshGenerationScript.cs
Unity learning/Manual mesh generation/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity learning/Manual mesh generation/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
Unity learning/Manual mesh generation/UserSettings/Layouts/: default-6000.dwlt
Unity learning/Material graphs/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Materials.sln  README.md
Unity learning/Material graphs/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
Unity learning/Material graphs/UserSettings/: EditorUserSettings.asset
Unity learning/Time controller/: Assembly-CSharp.csproj  README.md  TimeController.sln
Unity learning/Time controller/Assets/: UniversalRenderPipelineGlobalSettings.asset
Unity learning/Time controller/ProjectSettings/: ProjectSettings.asset  ProjectVersion.docx
(+18 files in other folders)
